easy-python-app/backend/k8s-objects/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers: 
      - name: backend
        image: backend-microservice:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        livenessProbe:
            httpGet:
              path: "/api/isalive"
              port: 8000
        readinessProbe:
            httpGet:
              path: "/api/isalive"
              port: 8000
