easy-python-app/backend/k8s-objects/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30800
