easy-python-app/backend/k8s-objects/backend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: "/api/.*"
        backend:
          serviceName: backend-service
          servicePort: 8000
